# procclean

./: .coderabbit.yaml  .dprint.jsonc  .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  CLAUDE.md  Cargo.toml  PYPI_README.md  README.md  hatch.toml  justfile  main.py  pc  pylintrc.toml  pyproject.toml  ruff.toml  ty.toml
.github/: dependabot.yml  labels.yml
.github/workflows/: ci.yml  codeql.yml  favicon.yml  labels.yml  mkdocs.yml  pr-test-comment.yml  publish.yml
.opencode/: opencode.jsonc
.zed/: settings.json
docs/: cli.md  examples.md  index.md  installation.md  tui.md
docs/stylesheets/: extra.css
python/procclean/: __init__.py  __init__.pyi  __main__.py
scripts/: format-workflow-scripts.ts  generate_cli_docs.py  generate_screenshots.py
site/: mkdocs.schema.json  mkdocs.yml
site/hooks/: ensure_cli_docs.py  ensure_screenshots.py  robots_txt.py
site/includes/: abbreviations.md
site/overrides/: main.html
site/schema/: theme.json
src/: lib.rs  main.rs  python.rs
src/cli/: commands.rs  mod.rs  parser.rs
src/core/: actions.rs  constants.rs  filters.rs  memory.rs  mod.rs  models.rs  process.rs
src/formatters/: columns.rs  mod.rs  output.rs
src/procclean/: __init__.py  __main__.py  _version.py  app.py  cli.py  formatters.py  process_analyzer.py
src/procclean/cli/: commands.py  docs.py  parser.py
src/procclean/core/: __init__.py  actions.py  constants.py  filters.py  memory.py  process.py
src/procclean/formatters/: __init__.py  columns.py  output.py
src/procclean/tui/: app.py  screens.py
src/tui/: app.rs  mod.rs  screens.rs
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_docs.py  test_formatters.py  test_process_analyzer.py
