[package]
name = "procclean"
version = "3.0.0"
edition = "2021"
authors = ["kjanat"]
description = "A fast, interactive process cleaner for finding and killing orphaned processes"
license = "MIT"
repository = "https://github.com/kjanat/procclean"
keywords = ["process", "tui", "cli", "system", "monitoring"]
categories = ["command-line-utilities"]

[lib]
name = "procclean"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "procclean"
path = "src/main.rs"

[dependencies]
# Process information
sysinfo = "0.32"
nix = { version = "0.29", features = ["process", "signal"] }

# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Formatting
tabled = "0.17"
comfy-table = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
regex = "1.11"
glob = "0.3"
chrono = "0.4"
is-terminal = "0.4"

# Python bindings (optional)
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
