[package]
name = "procclean"
version = "3.0.0"
edition = "2021"
authors = ["kjanat"]
description = "A fast, interactive process cleaner for finding and killing orphaned processes"
license = "MIT"
repository = "https://github.com/kjanat/procclean"
keywords = ["process", "tui", "cli", "system", "monitoring"]
categories = ["command-line-utilities"]

[lib]
name = "procclean"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "procclean"
path = "src/main.rs"

[dependencies]
# Process information
sysinfo = "0.37"
nix = { version = "0.30", features = ["process", "signal"] }

# CLI
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Formatting
tabled = "0.20"
comfy-table = "7.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
regex = "1.12"
glob = "0.3"
chrono = "0.4"
is-terminal = "0.4"

# Python bindings (optional)
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"

[features]
default = []
python = ["pyo3"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
