[project]
name = "procclean"
dynamic = ["version"]
description = "Interactive TUI for exploring and cleaning up processes - find orphans, memory hogs, and kill them"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "kjanat" }]
keywords = ["process", "memory", "cleanup", "tui", "terminal", "orphan", "kill"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=7.1.3",
    "textual>=6.6.0",
]

[project.urls]
Homepage = "https://github.com/kjanat/procclean"
Repository = "https://github.com/kjanat/procclean"

[project.scripts]
procclean = "procclean.app:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/procclean/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/procclean"]

[tool.uv]
package = true
