#:schema https://json.schemastore.org/pyproject.json
#:tombi schema.strict = false

[project]
name = "procclean"
description = "Interactive TUI for exploring and cleaning up processes - find orphans, memory hogs, and kill them"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "kjanat" }]
keywords = ["cleanup", "kill", "memory", "orphan", "process", "terminal", "tui"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "psutil>=7.2.1",
  "textual>=7.0.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/kjanat/procclean"
Repository = "https://github.com/kjanat/procclean"

[project.scripts]
procclean = "procclean.app:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.10",
  "ty>=0.0.8",
]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/procclean/_version.py"
