#:schema https://json.schemastore.org/pyproject.json
#:tombi schema.strict = true

[project]
name = "procclean"
version = "1.0.0"
description = "Interactive TUI for exploring and cleaning up processes - find orphans, memory hogs, and kill them"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Kaj Kowalski", email = "info@kajkowalski.nl" }]
keywords = ["cleanup", "kill", "memory", "orphan", "process", "terminal", "tui"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]
dependencies = [
  "psutil>=7.2.1",
  "tabulate>=0.9.0",
  "textual>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/kjanat/procclean"
Repository = "https://github.com/kjanat/procclean"

[project.scripts]
procclean = "procclean:main"

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.10",
  "textual-dev>=1.8.0",
  "ty>=0.0.8",
]
site = [
  "mkdocs>=1.6.1",
  "mkdocs-material[imaging]>=9.7.1",
  "mkdocs-rich-argparse",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
environments = ["sys_platform == 'linux'"]
default-groups = "all"

[tool.uv.sources]
mkdocs-rich-argparse = { git = "https://github.com/kjanat/mkdocs_rich_argparse.git", branch = "prog-style" }
